[package]
name = "lumina"
version = "0.1.0"
description = "LUMINA Protocol Compliance Program"
edition = "2021"

[lib]
name = "lumina"
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
solana-program = "1.18.26"
spl-transfer-hook-interface = "0.6.5"
spl-tlv-account-resolution = "0.6.5"

[features]
default = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]